tests/purs/failing/ViaInstanceNullaryTypeClass.out
Error found:
at tests/purs/failing/ViaInstanceNullaryTypeClass.purs:8:1 - 8:41 (line 8, column 1 - line 8, column 41)

  Cannot derive instance via [33mV[0m for
  [33m              [0m
  [33m  Main.Nullary[0m
  [33m              [0m
  Nullary type classes cannot be derived.


See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveNullaryTypeClassInstance.md for more information,
or to contribute content related to this error.

